--- a/interesting.html
+++ b/interesting.html
@@ -99,7 +99,7 @@
      <a href="#">
                         <img class="img-responsive" src="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-15%20at%206.12.46%20PM.png?raw=true" alt="">
                     </a>   
-        <p></p>
+        <p>Here is the relation between the amount of mammoth tusks and mammoth bones found.</p>
         <a href="#">
                         <img class="img-responsive" src="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-16%20at%205.23.54%20PM.png?raw=true" alt="">
                     </a> 
