--- a/interesting.html
+++ b/interesting.html
@@ -108,7 +108,8 @@
         <a href="#">
                         <img class="img-responsive" src="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-16%20at%205.23.54%20PM.png?raw=true" alt="">
                     </a> 
-  <a href="#">
+   <p>Interesting Facts</p>
+        <a href="#">
                         <img class="img-responsive" src="https://github.com/Saw-Dust/startbootstrap-clean-blog/blob/gh-pages/img/Screen%20Shot%202016-10-16%20at%2011.04.39%20AM.png?raw=true" alt="">
                     </a> 
     <hr>
