--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
             <br>
             <div id="success"></div>
             <div class="form-group">
-              <button type="submit" class="btn btn-secondary">Send</button>
+              <button type="submit" class="btn btn-secondary" id="sendMessageButton">Send</button>
             </div>
           </form>
         </div>
